--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ body {
 }
 
 .content {
-    padding-left: 3vw;
-    padding-top: 2vw;
-    padding-right: 5vw;
+    padding-left: 58px;
+    padding-top: 40px;
+    padding-right: 100px;
     color: #FFFFFF;
 
     display: flex;
@@ -32,7 +32,7 @@ body {
 
 h1 {
     font-family: Euclid Circular A, Arial Black, Candara, sans-serif;
-    font-size: 5vw !important;
+    font-size: 100px !important;
     font-weight: bold;
     font-variant: small-caps;
     text-transform: uppercase;
@@ -46,17 +46,17 @@ h1 {
     justify-content: flex-start;
     align-items: flex-start;
 
-    padding-top: 5vh;
-    padding-left: 2vw;
+    padding-top: 20px;
+    padding-left: 40px;
 }
 
 .todo-list {
-    padding-right: 2rem;
-    max-width: 30vw;
+    padding-right: 30px;
+    max-width: 600px;
 }
 
 #add {
-    margin-top: 1rem;
+    margin-top: 15px;
 }
 
 .todo {
@@ -69,31 +69,32 @@ h1 {
     border-radius: 15px;
     box-shadow: 2px 2px 3px #455a64 ;
 
-    margin-top: 1vh;
-    padding: .3vh 4vh 1vh 1vh;
+    margin-top: 10px;
+    padding: 3px 40px 10px 10px;
     max-width: 100%;
 }
 
 .todo:not(:first-child) {
-    margin-top: 2vh;
+    margin-top: 20px;
 }
 
 .todo-text-content {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    height: 7vh;
-    margin-top: .5vh;
+    height: 70px;
+    margin-top: 2px;
+    position: relative;
 }
 
 .done-checkbox {
-    margin-right: .5rem;
-    padding-top: .5vh;
-    height: 7vh;
-    width: 5vh;
+    margin-right: 8px;
+    padding-top: 5px;
+
+    width: 50px;
 
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
 }
 
@@ -103,24 +104,39 @@ span {
     height: 0;
 }
 
-.checkbox-orange[type="checkbox"].filled-in:not(:checked) + span:not(.lever)::after {
+.checkbox-orange[type="checkbox"].filled-in + span:not(.lever)::before {
     top: calc(50% - 10px) !important;
-    left: calc(50% - 10px);
+    left: calc(50% - 10px) !important;
 }
+
+/*.checkbox-orange[type="checkbox"].filled-in:not(:checked) + span:not(.lever)::after {*/
+/*    top: calc(50% - 10px) !important;*/
+/*    left: calc(50% - 10px);*/
+/*}*/
 
 .checkbox-orange[type="checkbox"].filled-in:checked + span:not(.lever):after {
     border: 2px solid #ff5722;
     background-color: #ff5722;
+    /*top: calc(50% - 10px) !important;*/
+    /*left: calc(50% - 10px);*/
+}
 
+.checkbox-orange[type="checkbox"].filled-in + span:not(.lever):after {
     top: calc(50% - 10px) !important;
     left: calc(50% - 10px);
+}
+
+.delete {
+    position: absolute !important;
+    right: -10px;
+    padding-left: 5px !important;
+    padding-right: 5px !important;
+    border-radius: 10% !important;
 }
 
 .title {
     font-weight: bold;
     font-size: x-large;
-
-    height: 7vh;
 
     display: flex;
     align-items: center;
@@ -129,6 +145,11 @@ span {
 .description {
     text-align: justify;
 
-    margin-left: calc(5vh + .5rem);
+    margin-left: 60px;
     margin-top: 0;
+}
+
+.strikethrough {
+    text-decoration: line-through;
+    opacity: 70%;
 }
