--- a/jquery/style.css
+++ b/jquery/style.css
@@ -28,6 +28,7 @@ body {
     justify-content: space-between;
     max-width: 100%;
     max-height: 100%;
+
 }
 
 h1 {
@@ -53,6 +54,7 @@ h1 {
 .todo-list {
     padding-right: 30px;
     max-width: 600px;
+    min-width: 600px;
 }
 
 #add {
